# nixhelm

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: cache-updated.yml  rebuild-cache.yml  update-chart.yml  update-charts.yml
charts/1password/connect/: default.nix
charts/M0NsTeRRR/routinator/: default.nix
charts/ananace-charts/lemmy/: default.nix
charts/argoproj/argo-cd/: default.nix
charts/argoproj/argo-workflows/: default.nix
charts/argoproj/argocd-image-updater/: default.nix
charts/atlantis/atlantis/: default.nix
charts/authelia/authelia/: default.nix
charts/authentik/authentik/: default.nix
charts/aws/aws-load-balancer-controller/: default.nix
charts/bitnami/elasticsearch/: default.nix
charts/bitnami/external-dns/: default.nix
charts/bitnami/ghost/: default.nix
charts/bitnami/mariadb-galera/: default.nix
charts/bitnami/mastodon/: default.nix
charts/bitnami/mongodb/: default.nix
charts/bitnami/mysql/: default.nix
charts/bitnami/nginx/: default.nix
charts/bitnami/postgresql/: default.nix
charts/bitnami/rabbitmq-cluster-operator/: default.nix
charts/bitnami/valkey/: default.nix
charts/bitnami/wordpress/: default.nix
charts/bjw-s-labs/app-template/: default.nix
charts/bytestash/bytestash/: default.nix
charts/cilium/cilium/: default.nix
charts/cloudflare/origin-ca-issuer/: default.nix
charts/cloudnative-pg/cloudnative-pg/: default.nix
charts/cloudnative-pg/plugin-barman-cloud/: default.nix
charts/community-charts/n8n/: default.nix
charts/concourse/concourse/: default.nix
charts/controlplaneio-fluxcd/flux-operator/: default.nix
charts/dagger-helm/dagger-helm/: default.nix
charts/dragonflydb/dragonfly-operator/: default.nix
charts/emberstack/reflector/: default.nix
charts/emqx/emqx/: default.nix
charts/emqx/emqx-operator/: default.nix
charts/external-dns/external-dns/: default.nix
charts/external-secrets/external-secrets/: default.nix
charts/firefly-iii/firefly-iii/: default.nix
charts/firefly-iii/importer/: default.nix
charts/fluxcd-community/flux2/: default.nix
src/helmupdater/: README.md  __init__.py  __main__.py  cli.py  git.py  logging.py  nix.py  utils.py
tests/: test_git.py
tests/_infra/: README.md  cleanup.sh  docker-compose.yaml  push-to-http-registry.sh  push-to-oci-registry.sh  setup.sh
tests/chart/: conftest.py  test_chart.py  test_chart_metadata.py  test_chart_version.py
tests/fixtures/: chart_metadata.py
tests/nix/: conftest.py  test_nix.py
tests/registry/: test_factory.py  test_http.py  test_oci.py
(+92 files in other folders)
