[project]
name = "helmupdater"
version = "0.1.0"
description = ""
authors = [{ name = "Vladimir Pouzanov", email = "farcaller@gmail.com" }]
requires-python = ">=3.10,<4"
dependencies = [
    "requests>=2.28.2,<3",
    "typer>=0.7.0,<0.8",
    "pyyaml>=6.0,<7",
    "semver>=2.13.0,<3",
    "chevron>=0.14.0,<0.15",
]

[project.scripts]
helmupdater = "helmupdater:app"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"
