[project]
name = "helmupdater"
version = "0.2.8"
description = ""
authors = [{ name = "Vladimir Pouzanov", email = "farcaller@gmail.com" }]
maintainers = [{ name = "Damon River", email = "damonriver@fastmail.com" }]

requires-python = ">=3.14,<4.0"
dependencies = [
  "chevron>=0.14.0",
  "oras>=0.2.42",
  "packaging>=25.0",
  "pydantic>=2.12.5",
  "pyyaml>=6.0",
  "requests>=2.32.4",
  "structlog>=25.0",
  "typer>=0.20",
]

[dependency-groups]
dev = ["ty>=0.0.2"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
helmupdater = "helmupdater.cli:app"

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests that require external services"]
addopts = ["--import-mode=importlib", "-m", "not e2e"]
pythonpath = [".", "src"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
